# Jui

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Jui.sln  Jui.vcxproj  Jui.vcxproj.filters  JuiConfig.cmake.in  Jui_Button.sc  Jui_Canvan.sc  Jui_Graph.sc  Jui_GraphVertex.sc  Jui_Timeline.sc  Jui_ViewControl.sc  canvan.cpp  canvan.h  juiTester.scd  juiTesterGraph.scd  testQt.cpp
Classes/: Button.cpp  Button.h  CMakeLists.txt  Canvan.cpp  Canvan.h  Console.cpp  Console.h
Resources/: QntGui.aps  QntGui.rc  resource.h
SCbuckup/: Jui_Graph.sc  Jui_GraphVertex.sc  Jui_Timeline.sc  juiTesterGraph.scd
Tester/: CMakeLists.txt  JuiTester.cpp
cmake_modules/: QtLinkMacro.cmake  RegPackageMacro.cmake
source/: CmakeLists.txt  JuiConfig.cmake.in  JuiResources.qrc
source/Configuration/: App.cpp  Config.cpp  Config.h
source/Core/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  CmakeLists.txt  Console.cpp  Console.h  Controls.cpp  Controls.h  Core.cpp  Core.h  Draw.cpp  Draw.h  Dummies.cpp  Dummies.h  Dummy.cpp  Dummy.h  Fade.cpp  Fade.h  Files.cpp  Files.h  Geometry.cpp  Geometry.h  GraphicObjects.cpp  GraphicObjects.h  Palette.cpp  Palette.h  Screens.cpp  Screens.h  Text.cpp  Text.h  Window.cpp  Window.h
source/Variables/: CMakeLists.txt  Variables.cpp  Variables.h
src/: CmakeLists.txt  JuiConfig.cmake.in  Student.h
src/Configuration/: App.cpp  CmakeLists.txt  Config.cpp  Config.h
src/Core/: Button.cpp  Canvan.cpp  Canvan.h  CanvanOLD.h  Canvas.cpp  Canvas.h  CmakeLists.txt  Student.cpp
x64/Debug/: Jui.lib
x64/Debug/Jui.tlog/: Jui.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  lib.command.1.tlog
