cmake_minimum_required( VERSION 3.7.2 )
cmake_policy(SET CMP0048 NEW)
project (Jui VERSION 0.0.9)

message(STATUS "")
message(STATUS "Jui [${PROJECT_VERSION}] config init...")

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
set(CMAKE_VS_INCLUDE_INSTALL_TO_DEFAULT_BUILD TRUE)
set(CMAKE_VS_INCLUDE_PACKAGE_TO_DEFAULT_BUILD TRUE)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

message(STATUS "\t CMAKE_BINARY_DIR: " ${CMAKE_BINARY_DIR})
message(STATUS "\t CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX})
message(STATUS "\t CMAKE_GENERATOR : " ${CMAKE_GENERATOR})
message(STATUS "\t CMAKE_BUILD_TYPE : " ${CMAKE_BUILD_TYPE})
message(STATUS "\t CMAKE_CONFIGURATION_TYPES : " ${CMAKE_CONFIGURATION_TYPES})

add_subdirectory(source)

export(PACKAGE Jui)

message(STATUS "Jui config done...\n")

# CPACK SETUP ###################################################
# otevri package.vcxproj - pMouse - Open dev cmd propmpt - "cpack"

if(WIN32)
	set(CPACK_GENERATOR WIX)
	set(CPACK_PACKAGE_NAME ${CMAKE_PROJECT_NAME})
	set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
	set(CPACK_PACKAGE_DIRECTORY ${buildDir})
	set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CMAKE_PROJECT_NAME})
	
	set(CPACK_WIX_UPGRADE_GUID "EE4C89CB-D529-4698-8EF7-659EEAB9CA4E")
	set(CPACK_WIX_CMAKE_PACKAGE_REGISTRY "Jui")
	
	include(CPack)
endif()